--- a/web/themes/custom/child_nexus/css/child_nexus.css
+++ b/web/themes/custom/child_nexus/css/child_nexus.css
@@ -8,7 +8,7 @@
     border-bottom: 5px solid #F96B61;
     border-top: 5px solid #F96B61;
     padding: 0;
-	
+
 
 }
 
@@ -43,4 +43,10 @@
 .form-adhess {
 	padding: 30px;
 	border: solid 1px rgba(0,0,0,0.4);
+}
+
+.form_ch_stats .form-item-status {
+	margin: 0;
+	margin-left: 10px;
+	margin-right: 10px;
 }
